# speedtest-rs

./: Cargo.toml  MANUAL_OPERACAO.md  MANUAL_OPERACIONAL.md  README.md  manual_operacao.md
src/: main.rs
src/audit/: mod.rs
src/cli/: mod.rs
src/ping/: mod.rs
src/server/: mod.rs
src/speedtest/: mod.rs
src/tui/: mod.rs
