[package]
name = "speedtest_rs"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
num_cpus = "1.0"
rayon = "1.10"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["blocking", "gzip", "brotli", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
