[package]
name = "speedtest-auditor"
version = "0.1.0"
edition = "2021"
description = "Speedtest CLI com TUI, ping com jitter e output JSON/CSV"
license = "MIT"
repository = "https://github.com/klebernicolau/speedtest-rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
num_cpus = "1.0"
rayon = "1.10"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
